dev: replaced usage of standard OS service (Screen.drawPixel) to using sprite for high speed graphics by using the OS service (Memory.poke) which is highly optimised. I.e., The former requires 40 machine operation/cycles per pixels rendered, whereas the latter requires only 4 machine operation/cycles per pixels rendered.

--- a/nand2tetris/projects/9/PrizeLocker/SquareGame.vm
+++ b/nand2tetris/projects/9/PrizeLocker/SquareGame.vm
@@ -73,6 +73,16 @@ push this 1
 call Square.moveRight 1
 pop temp 0
 label IF_FALSE3
+push this 0
+push constant 128
+push constant 32
+call Math.multiply 2
+push constant 256
+push constant 16
+call Math.divide 2
+add
+call PrizeLocker.draw 2
+pop temp 0
 push constant 5
 call Sys.wait 1
 pop temp 0
