--- a/nand2tetris/projects/9/PrizeLocker/PrizeLocker.vm
+++ b/nand2tetris/projects/9/PrizeLocker/PrizeLocker.vm
@@ -9,56 +9,125 @@ pop this 1
 push argument 2
 pop this 2
 push pointer 0
-call PrizeLocker.draw 1
-pop temp 0
-push pointer 0
 return
-function PrizeLocker.draw 0
+function PrizeLocker.draw 1
 push argument 0
 pop pointer 0
+push constant 16384
+push argument 1
+add
+pop local 0
+push local 0
 push constant 0
-not
-call Screen.setColor 1
+add
+push constant 1
+neg
+call Memory.poke 2
 pop temp 0
-push this 0
-push this 1
-push this 0
-push this 2
+push local 0
+push constant 32
 add
-push this 1
-call Screen.drawLine 4
+push constant 32767
+neg
+call Memory.poke 2
 pop temp 0
-push this 0
-push this 1
-push this 0
-push this 1
-push this 2
+push local 0
+push constant 64
 add
-call Screen.drawLine 4
+push constant 32767
+neg
+call Memory.poke 2
 pop temp 0
-push this 0
-push this 1
-push this 2
+push local 0
+push constant 96
 add
-push this 0
-push this 2
-add
-push this 1
-push this 2
-add
-call Screen.drawLine 4
+push constant 32767
+neg
+call Memory.poke 2
 pop temp 0
-push this 0
-push this 2
+push local 0
+push constant 128
 add
-push this 1
-push this 2
+push constant 32767
+neg
+call Memory.poke 2
+pop temp 0
+push local 0
+push constant 160
 add
-push this 0
-push this 2
+push constant 32767
+neg
+call Memory.poke 2
+pop temp 0
+push local 0
+push constant 192
 add
-push this 1
-call Screen.drawLine 4
+push constant 32767
+neg
+call Memory.poke 2
+pop temp 0
+push local 0
+push constant 224
+add
+push constant 32767
+neg
+call Memory.poke 2
+pop temp 0
+push local 0
+push constant 256
+add
+push constant 32767
+neg
+call Memory.poke 2
+pop temp 0
+push local 0
+push constant 288
+add
+push constant 32767
+neg
+call Memory.poke 2
+pop temp 0
+push local 0
+push constant 320
+add
+push constant 32767
+neg
+call Memory.poke 2
+pop temp 0
+push local 0
+push constant 352
+add
+push constant 32767
+neg
+call Memory.poke 2
+pop temp 0
+push local 0
+push constant 384
+add
+push constant 32767
+neg
+call Memory.poke 2
+pop temp 0
+push local 0
+push constant 416
+add
+push constant 32767
+neg
+call Memory.poke 2
+pop temp 0
+push local 0
+push constant 448
+add
+push constant 32767
+neg
+call Memory.poke 2
+pop temp 0
+push local 0
+push constant 480
+add
+push constant 1
+neg
+call Memory.poke 2
 pop temp 0
 push constant 0
 return
