--- a/nand2tetris/projects/9/Sandbox/Main.vm
+++ b/nand2tetris/projects/9/Sandbox/Main.vm
@@ -31,8 +31,27 @@ push constant 72
 call String.appendChar 2
 call Output.printString 1
 pop temp 0
+push constant 0
+not
+call Screen.setColor 1
+pop temp 0
+push constant 400
+push constant 128
+push constant 422
+push constant 140
+call Screen.drawRectangle 4
+pop temp 0
 push constant 5
 call Sys.wait 1
+pop temp 0
+push constant 0
+call Screen.setColor 1
+pop temp 0
+push constant 400
+push constant 128
+push constant 422
+push constant 140
+call Screen.drawRectangle 4
 pop temp 0
 goto WHILE_EXP0
 label WHILE_END0
