--- a/nand2tetris/projects/9/Sandbox/Main.vm
+++ b/nand2tetris/projects/9/Sandbox/Main.vm
@@ -1,11 +1,14 @@
-function Main.main 4
+function Main.main 5
 push constant 10
-pop static 2
+pop static 3
 push constant 0
 pop local 1
-push static 2
+push static 3
 call Array.new 1
 pop static 1
+push static 3
+call Array.new 1
+pop static 2
 push constant 0
 pop static 0
 push constant 40
@@ -197,98 +200,11 @@ call Main.savePassword 0
 pop temp 0
 goto IF_END0
 label IF_FALSE0
-push constant 9
-call String.new 1
-push constant 89
-call String.appendChar 2
-push constant 111
-call String.appendChar 2
-push constant 117
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-push constant 104
-call String.appendChar 2
-push constant 97
-call String.appendChar 2
-push constant 118
-call String.appendChar 2
-push constant 101
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-call Output.printString 1
+push constant 19
+push constant 0
+call Output.moveCursor 2
 pop temp 0
-push static 0
-call Output.printInt 1
-pop temp 0
-push constant 30
-call String.new 1
-push constant 32
-call String.appendChar 2
-push constant 112
-call String.appendChar 2
-push constant 97
-call String.appendChar 2
-push constant 115
-call String.appendChar 2
-push constant 115
-call String.appendChar 2
-push constant 119
-call String.appendChar 2
-push constant 111
-call String.appendChar 2
-push constant 114
-call String.appendChar 2
-push constant 100
-call String.appendChar 2
-push constant 115
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-push constant 115
-call String.appendChar 2
-push constant 97
-call String.appendChar 2
-push constant 118
-call String.appendChar 2
-push constant 101
-call String.appendChar 2
-push constant 100
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-push constant 97
-call String.appendChar 2
-push constant 116
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-push constant 116
-call String.appendChar 2
-push constant 104
-call String.appendChar 2
-push constant 101
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-push constant 109
-call String.appendChar 2
-push constant 111
-call String.appendChar 2
-push constant 109
-call String.appendChar 2
-push constant 101
-call String.appendChar 2
-push constant 110
-call String.appendChar 2
-push constant 116
-call String.appendChar 2
-call Output.printString 1
-pop temp 0
-call Output.println 0
-pop temp 0
-push constant 22
+push constant 23
 call String.new 1
 push constant 65
 call String.appendChar 2
@@ -333,6 +249,8 @@ call String.appendChar 2
 push constant 114
 call String.appendChar 2
 push constant 100
+call String.appendChar 2
+push constant 115
 call String.appendChar 2
 call Output.printString 1
 pop temp 0
@@ -454,7 +372,11 @@ eq
 if-goto IF_TRUE1
 goto IF_FALSE1
 label IF_TRUE1
-call Main.resetScreen 0
+call Screen.clearScreen 0
+pop temp 0
+push constant 19
+push constant 0
+call Output.moveCursor 2
 pop temp 0
 call Main.savePassword 0
 pop temp 0
@@ -465,9 +387,146 @@ eq
 if-goto IF_TRUE2
 goto IF_FALSE2
 label IF_TRUE2
-call Main.resetScreen 0
+call Screen.clearScreen 0
 pop temp 0
-call Main.showSavedPasswords 0
+push constant 0
+push constant 0
+call Output.moveCursor 2
+pop temp 0
+push constant 0
+pop local 4
+label WHILE_EXP1
+push local 4
+push static 0
+lt
+not
+if-goto WHILE_END1
+push local 4
+call Output.printInt 1
+pop temp 0
+push constant 2
+call String.new 1
+push constant 46
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+call Output.printString 1
+pop temp 0
+push local 4
+push static 2
+add
+pop pointer 1
+push that 0
+call Output.printString 1
+pop temp 0
+call Output.println 0
+pop temp 0
+push local 4
+push constant 1
+add
+pop local 4
+goto WHILE_EXP1
+label WHILE_END1
+push constant 22
+call String.new 1
+push constant 69
+call String.appendChar 2
+push constant 110
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 97
+call String.appendChar 2
+push constant 99
+call String.appendChar 2
+push constant 99
+call String.appendChar 2
+push constant 111
+call String.appendChar 2
+push constant 117
+call String.appendChar 2
+push constant 110
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 110
+call String.appendChar 2
+push constant 117
+call String.appendChar 2
+push constant 109
+call String.appendChar 2
+push constant 98
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 58
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+call Keyboard.readInt 1
+pop static 4
+call Screen.clearScreen 0
+pop temp 0
+push constant 0
+push constant 0
+call Output.moveCursor 2
+pop temp 0
+push constant 18
+call String.new 1
+push constant 89
+call String.appendChar 2
+push constant 111
+call String.appendChar 2
+push constant 117
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 112
+call String.appendChar 2
+push constant 97
+call String.appendChar 2
+push constant 115
+call String.appendChar 2
+push constant 115
+call String.appendChar 2
+push constant 119
+call String.appendChar 2
+push constant 111
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 100
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 105
+call String.appendChar 2
+push constant 115
+call String.appendChar 2
+push constant 58
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+call Output.printString 1
+pop temp 0
+push static 4
+push static 1
+add
+pop pointer 1
+push that 0
+call Output.printString 1
 pop temp 0
 label IF_FALSE2
 label IF_END0
@@ -475,7 +534,125 @@ goto WHILE_EXP0
 label WHILE_END0
 push constant 0
 return
-function Main.savePassword 1
+function Main.savePassword 0
+push constant 53
+call String.new 1
+push constant 69
+call String.appendChar 2
+push constant 110
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 119
+call String.appendChar 2
+push constant 104
+call String.appendChar 2
+push constant 105
+call String.appendChar 2
+push constant 99
+call String.appendChar 2
+push constant 104
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 97
+call String.appendChar 2
+push constant 99
+call String.appendChar 2
+push constant 99
+call String.appendChar 2
+push constant 111
+call String.appendChar 2
+push constant 117
+call String.appendChar 2
+push constant 110
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 116
+call String.appendChar 2
+push constant 104
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 112
+call String.appendChar 2
+push constant 97
+call String.appendChar 2
+push constant 115
+call String.appendChar 2
+push constant 115
+call String.appendChar 2
+push constant 119
+call String.appendChar 2
+push constant 111
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 100
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 98
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 105
+call String.appendChar 2
+push constant 110
+call String.appendChar 2
+push constant 103
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 115
+call String.appendChar 2
+push constant 97
+call String.appendChar 2
+push constant 118
+call String.appendChar 2
+push constant 101
+call String.appendChar 2
+push constant 100
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 105
+call String.appendChar 2
+push constant 115
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+push constant 102
+call String.appendChar 2
+push constant 111
+call String.appendChar 2
+push constant 114
+call String.appendChar 2
+push constant 58
+call String.appendChar 2
+push constant 32
+call String.appendChar 2
+call Keyboard.readLine 1
+pop static 4
+push static 0
+push static 2
+add
+push static 4
+pop temp 0
+pop pointer 1
+push temp 0
+pop that 0
 push constant 37
 call String.new 1
 push constant 69
@@ -553,11 +730,11 @@ call String.appendChar 2
 push constant 32
 call String.appendChar 2
 call Keyboard.readLine 1
-pop local 0
+pop static 5
 push static 0
 push static 1
 add
-push local 0
+push static 5
 pop temp 0
 pop pointer 1
 push temp 0
@@ -566,51 +743,7 @@ push static 0
 push constant 1
 add
 pop static 0
-push constant 0
-return
-function Main.showSavedPasswords 1
-push constant 0
-pop local 0
-label WHILE_EXP0
-push local 0
-push static 0
-lt
-not
-if-goto WHILE_END0
-push local 0
-call Output.printInt 1
-pop temp 0
-push constant 2
-call String.new 1
-push constant 46
-call String.appendChar 2
-push constant 32
-call String.appendChar 2
-call Output.printString 1
-pop temp 0
-push local 0
-push static 1
-add
-pop pointer 1
-push that 0
-call Output.printString 1
-pop temp 0
-call Output.println 0
-pop temp 0
-push local 0
-push constant 1
-add
-pop local 0
-goto WHILE_EXP0
-label WHILE_END0
-push constant 0
-return
-function Main.resetScreen 0
 call Screen.clearScreen 0
-pop temp 0
-push constant 0
-push constant 0
-call Output.moveCursor 2
 pop temp 0
 push constant 0
 return
