--- a/nand2tetris/projects/11/JackCompiler/Point.vm
+++ b/nand2tetris/projects/11/JackCompiler/Point.vm
@@ -1,4 +1,3 @@
-compiling Point.jack
 // compiling subroutine
 function Point.new 0
 push constant 2
@@ -75,10 +74,10 @@ push temp 0
 pop that 0
 push local 0 // symbol -> dx
 push local 0 // symbol -> dx
-Math.multiply 2
+call Math.multiply 2
 push local 1 // symbol -> dy
 push local 1 // symbol -> dy
-Math.multiply 2
+call Math.multiply 2
 add
 call Math.sqrt 1 // subroutine call (function)
 return
